fix: word-wrap

--- a/client/src/components/Resume/Resume.scss
+++ b/client/src/components/Resume/Resume.scss
@@ -6,6 +6,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  .line {
+    display: inline-block;
+  }
   .print {
     z-index: 999;
     .btn-overlay {
